export in Naev format

--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@
     <p class="sidebar-title">Tools</p>
     <p class="sidebar-item active" id="switch-draw" onclick="switchTool('draw');">Draw</p>
     <p class="sidebar-item" id="switch-delete" onclick="switchTool('delete');">Delete</p>
+    <p class="sidebar-item" id="switch-export" onclick="switchTool('export');">Export</p>
     <p class="sidebar-item" id="switch-color" onclick="switchTool('color');">Color</p>
     <div class="sidebar-item-colors">
       <span id="color-dark"></span>
